[package]
name = "rust-http-proxy"
version = "0.1.0"
authors = ["Sean Burton <sean.burton@thalesesecurity.com>"]
edition = "2018"

[dependencies]
log = "^0.4.8"
tokio = "=0.2.0-alpha.6"
tokio-tls = "=0.3.0-alpha.6"
hyper = "=0.13.0-alpha.4"
hyper-tls = "=0.4.0-alpha.4"
http = "^0.1.19"
futures-util = "^0.3.1"
tower-service = "=0.3.0-alpha.2"
openssl = "^0.10.25"

[dev-dependencies]
env_logger = "^0.6.2"
