[package]
name = "rust-http-proxy"
version = "0.1.0"
authors = ["Sean Burton <sean.burton@thalesesecurity.com>"]
edition = "2018"

[dependencies]
log = "^0.4.11"
tokio = { version="^0.2.22", features=["tcp", "dns", "rt-threaded", "macros"] }
tokio-tls = "^0.3.1"
hyper = "^0.13.7"
hyper-tls = "^0.4.3"
native-tls = "^0.2.4"
http = "^0.2.1"
futures = "^0.3.5"
tower-service = "^0.3.0"
openssl = "^0.10.30"

[dev-dependencies]
env_logger = "^0.7.1"
